# kint

./: configure.ac
src/: Annotation.cc  Annotation.h  CRange.h  CallGraph.cc  CmpOverflow.cc  CmpSat.cc  CmpTautology.cc  Diagnostic.cc  IntGlobal.cc  IntGlobal.h  IntLibcalls.cc  IntRewrite.cc  IntSat.cc  KINTCallGraph.cc  KINTGlobal.h  KINTRange.cc  KINTTaint.cc  LoadRewrite.cc  Makefile.am  OverflowIdiom.cc  OverflowSimplify.cc  PathGen.cc  Range.cc  Taint.cc  ValueGen.cc  ValueGen.h  intck
src/llvm/: DataLayout.h  DebugInfo.h  IRBuilder.h
test/: kint-cc1  lit.cfg.in
test/int/: malloc_array.ll
